[package]
name = "benchmarks"
version = "0.1.0"
edition = "2018"

[dependencies]
async-channel = "1.7"
crossbeam = "0.8"
crossbeam-channel = "0.5"
flume = "0.10"
futures = { version = "0.3", features = ["thread-pool"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
kanal = { version = "0.1.0-pre8" }
kanal-std-mutex = { git = "https://github.com/fereidani/kanal", rev = "125fb78", features = ["std-mutex"], package = "kanal" }
proxide = { version = "0.1.0", path = "../rust/hyper-reverse-proxy" }
async-stream = "0.3.5"

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
lto = 'thin'
panic = 'abort'
codegen-units = 1
rpath = false


[[bin]]
name = "crossbeam-channel"
path = "crossbeam-channel.rs"
doc = false

[[bin]]
name = "kanal"
path = "kanal.rs"
doc = false

[[bin]]
name = "kanal-async"
path = "kanal-async.rs"
doc = false

[[bin]]
name = "kanal-std-mutex"
path = "kanal-std-mutex.rs"
doc = false

[[bin]]
name = "kanal-std-mutex-async"
path = "kanal-std-mutex-async.rs"
doc = false

[[bin]]
name = "flume"
path = "flume.rs"
doc = false

[[bin]]
name = "flume-async"
path = "flume-async.rs"
doc = false

[[bin]]
name = "futures-channel"
path = "futures-channel.rs"
doc = false

[[bin]]
name = "mpsc"
path = "mpsc.rs"
doc = false

[[bin]]
name = "async-channel"
path = "async-channel.rs"
doc = false

[[bin]]
name = "proxide-spsc"
path = "proxide-spsc.rs"
doc = false

[[bin]]
name = "async-stream"
path = "async-stream.rs"
doc = false

[[bin]]
name = "tokio-mpsc"
path = "tokio-mpsc.rs"
doc = false
